<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:src="@drawable/kev"
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="503dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/space2"
        app:layout_constraintStart_toStartOf="@+id/space2"
        app:layout_constraintTop_toBottomOf="@+id/space2">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:text="@string/table_layout_track"
                android:textSize="12sp" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/table_layout_track_value"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:text="@string/table_layout_country"
                android:textSize="12sp" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/table_layout_country_value"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:text="@string/table_layout_email"
                android:textSize="12sp" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/table_layout_email_value"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:text="@string/table_layout_phone"
                android:textSize="12sp" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/table_layout_phone_value"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:padding="3dip"
                android:text="@string/table_layout_slack_username"
                android:textSize="12sp" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/table_layout_slack_username_value"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>