<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/amerikapro"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAlc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/drawable_button"
        android:fontFamily="@font/amerikapro"
        android:padding="5dp"
        android:text="@string/about_alc"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/drawable_button"
        android:fontFamily="@font/amerikapro"
        android:padding="5dp"
        android:text="@string/my_profile"
        app:layout_constraintEnd_toEndOf="@+id/btnAlc"
        app:layout_constraintStart_toStartOf="@+id/btnAlc"
        app:layout_constraintTop_toBottomOf="@+id/btnAlc" />

</android.support.constraint.ConstraintLayout>